added youtube data

--- a/prepare_voxforge_kaldi.ipynb
+++ b/prepare_voxforge_kaldi.ipynb
@@ -1077,8 +1077,7 @@
    "outputs": [],
    "source": [
     "! cp -R /home/dima/kaldi/egs/wsj/s5/steps /home/dima/kaldi/egs/stt_uk/steps\n",
-    "! cp -R /home/dima/kaldi/egs/wsj/s5/utils /home/dima/kaldi/egs/stt_uk/utils\n",
-    "! cp -R /home/dima/kaldi/egs/voxforge/s5/local/score.sh /home/dima/kaldi/egs/stt_uk/local/score.sh"
+    "! cp -R /home/dima/kaldi/egs/wsj/s5/utils /home/dima/kaldi/egs/stt_uk/utils"
    ]
   },
   {
